...

        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:backgroundTint="#663F51B5"
        android:foregroundGravity="top"
        android:text="Sign out"
...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/eventButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:backgroundTint="#6603A9F4"
        android:foregroundGravity="top"
        android:text="@string/add_event_btn_caption"
...
